--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -81,13 +81,36 @@ a.nav:hover {
     text-decoration: underline;
 }
 
+/* Skip Link */
+.skip-link {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    padding: 0.5rem 1rem;
+    background: #005C9C;
+    color: #fff;
+    font-weight: bold;
+    z-index: 100;
+    text-decoration: none;
+}
+.skip-link:focus {
+    top: 0;
+}
+
+/* Focus styles for keyboard navigation */
+a:focus-visible {
+    outline: 2px solid #005C9C;
+    outline-offset: 2px;
+    border-radius: 2px;
+}
+
 /* Date Styling */
 .date {
     color: #bbb;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 0.75rem;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 0.625rem;
 }
 
 /* Posts */
@@ -95,4 +118,7 @@ a.nav:hover {
     line-height: 1.7rem;
 }
 .post img {
-    width: 100%; /*
+    width: 100%;
+    height: auto;
+    display: block;
+}
